# KNN_Regrassion_task12_Anatoly_Lapin

./: main.py  pyproject.toml  student_score.cbm  test.csv
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
