[tool.poetry]
name = "knn-regrassion-task12-anatoly-lapin"
version = "0.1.0"
description = ""
authors = ["Anatoly <constructor-08@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
catboost = "^1.2.2"
scikit-learn = "^1.3.1"
seaborn = "^0.12.2"
mlxtend = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
